--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,7 +2,7 @@ extends layouts/default
 
 block main
   - if (req.isAuthenticated())
-    .container-fluid
+    .container-fluid.side-collapse-container
         .row
             .col-sm-3.col-md-2.sidebar
                 .user-sidebar
