--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,13 +1,8 @@
-// jQuery 2.0.2
+
 script(src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js")
-// jQuery UI 1.10.3
 script(src="/js/jquery-ui-1.10.3.js", type="text/javascript")
-// Bootstrap
 script(src="/js/bootstrap.js", type="text/javascript")
-// Bootstrap WYSIHTML5
 script(src="/js/wysihtml5.js", type="text/javascript")
-// AdminLTE
 script(src="/js/dashboard.js", type="text/javascript")
-// Validation
 script(src="/js/form-validation.js", type="text/javascript")
-block foot
+script(src="/js/timeline.js", type="text/javascript")
