--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,24 +1,24 @@
-nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+header.navbar-inverse.navbar-fixed-top(role='header')
     - if (req.isAuthenticated())
         .container-fluid
             .navbar-header
-                button(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1").navbar-toggle
-                    span.sr-only Toggle navigation
+                button.navbar-toggle(data-toggle='collapse-side', data-target='.side-collapse', data-target-2='.side-collapse-container', type='button')
                     span.icon-bar
                     span.icon-bar
                     span.icon-bar
-                a.navbar-brand(href='/') wBook
-            .collapse.navbar-collapse
-                ul.nav.navbar-nav.navbar-right
-                    li.dropdown
-                        a(href='#', data-toggle='dropdown').dropdown-toggle: span.glyphicon.glyphicon-pencil
-                        ul.dropdown-menu
-                            li: a(href="/articles/new") Новая статья
-                    li.dropdown
-                        a(href="#", data-toggle="dropdown").dropdown-toggle: span.glyphicon.glyphicon-cog
-                        ul.dropdown-menu
-                            li: a(href="/users/"+req.user.id) Профиль
-                            li: a(href="/logout") Выйти
+                a.navbar-brand(href='../') wBook
+            .navbar-inverse.side-collapse.in
+                nav.navbar-collapse(role='navigation')
+                    ul.nav.navbar-nav.pull-right
+                        li.dropdown
+                            a(href='#', data-toggle='dropdown').dropdown-toggle Управление материалом
+                            ul.dropdown-menu
+                                li: a(href="/articles/new") Новая статья
+                        li.dropdown
+                            a(href="#", data-toggle="dropdown").dropdown-toggle Профиль
+                            ul.dropdown-menu
+                                li: a(href="/users/"+req.user.id) Профиль
+                                li: a(href="/logout") Выйти
 
     - else
         .container
