--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4859,7 +4859,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
-  color: #ссс;
+  color: #cccccc;
   background-color: #080808;
 }
 
