--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -7,6 +7,7 @@ html(lang='ru')
         title= title + ' - ' + pkg.name
 
         link(href="/css/bootstrap.css", rel="stylesheet", type="text/css")
+        link(rel="stylesheet", href="/css/font-awesome.min.css")
         link(href="/css/bootstrap-wysihtml5/bootstrap3-wysihtml5.css", rel="stylesheet", type="text/css")
         link(href="/css/main.css", rel="stylesheet", type="text/css")
         link(href="/css/timeline/timeline.css" rel="stylesheet")
