--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -4,13 +4,10 @@ html(lang='ru')
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        title= title + ' - ' + pkg.name
+        title= pkg.name + ' | ' + title
 
-        link(href="/css/bootstrap.css", rel="stylesheet", type="text/css")
-        link(rel="stylesheet", href="/css/font-awesome.min.css")
-        link(href="/css/bootstrap-wysihtml5/bootstrap3-wysihtml5.css", rel="stylesheet", type="text/css")
+        link(href="/stylesheets/bootstrap.css", rel="stylesheet", type="text/css")
         link(href="/css/main.css", rel="stylesheet", type="text/css")
-        link(href="/css/timeline/timeline.css" rel="stylesheet")
     body
         include ../includes/header
         - if (req.isAuthenticated() === false)
