--- a/app/views/500.jade
+++ b/app/views/500.jade
@@ -1,9 +1,22 @@
 extends layouts/default
 
 block main
-  h1 Oops something went wrong
-  br
-  span 500
+    div.container
+        div.row
+            div.col-md-12
+                div.error-template
+                    h1
+                        | Oops!
+                    h2!= error
+                    div.error-details
+                        | Sorry, an error has occured, Requested page not found!
+                    div.error-actions
+                        a.btn.btn-primary.btn-lg(href='http://www.jquery2dotnet.com')
+                            span.glyphicon.glyphicon-home
+                            | Take Me Home
+                        a.btn.btn-default.btn-lg(href='http://www.jquery2dotnet.com')
+                            span.glyphicon.glyphicon-envelope
+                            | Contact Support
 
 block content
   pre= error
