--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -14,6 +14,7 @@ header.navbar.navbar-default.navbar-fixed-top(role='header')
                             a(href='#', data-toggle='dropdown').dropdown-toggle Управление материалом
                             ul.dropdown-menu
                                 li: a(href="/articles/new") Новая статья
+                                li: a(href="/sections/new") Новый раздел
                         li.dropdown
                             a(href="#", data-toggle="dropdown").dropdown-toggle Профиль
                             ul.dropdown-menu
