--- a/app/views/sections/show.jade
+++ b/app/views/sections/show.jade
@@ -1,3 +1,7 @@
-//
-   Created by i-store on 27/05/14.
-
+extends ../index
+block content
+    .container-fluid
+        .row
+            .col-md-12
+                P!= section.title
+                p!= section.description
