--- a/app/views/sections/form.jade
+++ b/app/views/sections/form.jade
@@ -2,17 +2,19 @@ extends ../index
 
 block content
     - var section = '/sections'
-    - section += section.isNew? '' : '/' + section.secIdd
+    - section += section.isNew? '' : '/' + section.secId
     .container-fluid
         .col-md-12
-            form.form-horizontal(method="post", action=action, enctype="multipart/form-data", role="form")
+            form.form-horizontal(method="post", action=action, role="form")
                 input(type="hidden", name="_csrf", value="#{csrf_token}")
                 - if (!section.isNew)
                     input(type="hidden", name="_method", value="PUT")
                 .form-group
-                    input.form-control#title(type='text', name="title", value=section.title, placeholder='Enter the title')
+                    input.form-control#title(type='text', name="icon", value=section.icon, placeholder='Enter the code icon')=section.icon
                 .form-group
-                    textarea(name="description", placeholder="Краткое описание материала", style="width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=section.description
+                    input.form-control#title(type='text', name="title", value=section.title, placeholder='Enter the title')=section.title
+                .form-group
+                    textarea.form-control(name="description", placeholder="Краткое описание материала", style="width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=section.description
                 .form-group
                     button.btn.btn-primary(type='submit') Сохранить
                     | &nbsp;
