--- a/app/views/sections/index.jade
+++ b/app/views/sections/index.jade
@@ -15,7 +15,7 @@ block content
                             h3.title= section.title
                             p= section.description
                             div.more
-                                a(href='/section/' + section.title, title=section.title)
+                                a(href='/tags/' + section.title, title=section.title)
                                     | Начать изучение
                                     i.fa.fa-angle-double-right
                     div.space
