Fixed section, Added Settings for users

--- a/app/views/500.jade
+++ b/app/views/500.jade
@@ -10,12 +10,9 @@ block main
                     h2
                     div.error-details!= error
                     div.error-actions
-                        a.btn.btn-primary.btn-lg(href='http://www.jquery2dotnet.com')
+                        a.btn.btn-primary.btn-lg(href='/')
                             span.glyphicon.glyphicon-home
-                            | Take Me Home
-                        a.btn.btn-default.btn-lg(href='http://www.jquery2dotnet.com')
-                            span.glyphicon.glyphicon-envelope
-                            | Contact Support
+                            | Вернуться обратно
 
 block content
   pre= error
