--- a/app/views/sections/form.jade
+++ b/app/views/sections/form.jade
@@ -1,8 +1,8 @@
 extends ../index
 
 block content
-    - var section = '/sections'
-    - section += section.isNew? '' : '/' + section.secId
+    - var action = '/sections'
+    - action += section.isNew? '' : '/'
     .container-fluid
         .col-md-12
             form.form-horizontal(method="post", action=action, role="form")
@@ -10,10 +10,21 @@ block content
                 - if (!section.isNew)
                     input(type="hidden", name="_method", value="PUT")
                 .form-group
-                    input.form-control#title(type='text', name="icon", value=section.icon, placeholder='Enter the code icon')=section.icon
+                    label(for="icon") Иконка
+                    .input-group.image-preview
+                        input.form-control.image-preview-filename(type='text', name="icon", value=section.icon, placeholder='Enter the code icon', disabled='disabled')= section.icon
+                        span.input-group-btn
+                            button.btn.btn-default.image-preview-clear(type='button', style='display:none;')
+                                span.glyphicon.glyphicon-remove  Clear
+                            .btn.btn-default.image-preview-input
+                                span.glyphicon.glyphicon-folder-open
+                                span.image-preview-input-title  Browse
+                                input(type='file', accept='image/png, image/jpeg, image/gif', name='input-file-preview')
                 .form-group
+                    label(for="title") Заголовок
                     input.form-control#title(type='text', name="title", value=section.title, placeholder='Enter the title')=section.title
                 .form-group
+                    label(for="desctipyion") Краткое описание
                     textarea.form-control(name="description", placeholder="Краткое описание материала", style="width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=section.description
                 .form-group
                     button.btn.btn-primary(type='submit') Сохранить
