--- a/app/views/sections/index.jade
+++ b/app/views/sections/index.jade
@@ -16,7 +16,7 @@ block content
                             p= section.description
                             div.more
                                 a(href='/tags/' + section.title, title=section.title)
-                                    | Начать изучение
+                                    | Начать изучение &nbsp;
                                     i.fa.fa-angle-double-right
                     div.space
     - else
