--- a/app/views/articles/form.jade
+++ b/app/views/articles/form.jade
@@ -12,13 +12,17 @@ block content
                 - if (!article.isNew)
                     input(type="hidden", name="_method", value="PUT")
                 .form-group
-                    input.form-control#title(type='text', name="title", value=article.title, placeholder='Enter the title')
+                    label(for="title") Заголовок
+                    input.form-control#title(type='text', name="title", value=article.title, placeholder='Заголовок')
                 .form-group
+                    label(for="title") Краткое описание
                     textarea.form-control(name="description", placeholder="Краткое описание материала", style="width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.description
                 .form-group
-                    textarea.form-control.textarea#desc(name="body", placeholder="Place some text here", style="width: 100%; height: 350px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.body
+                    label(for="title") Полное описание
+                    textarea.form-control.textarea#desc(name="body", placeholder="Полное описание материала", style="width: 100%; height: 350px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.body
                 .form-group
-                    input.form-control#tags(type='text', name="tags", value=article.tags, placeholder='Enter the tags')
+                    label(for="title") Теги
+                    input.form-control#tags(type='text', name="tags", value=article.tags, placeholder='Введите теги')
                 .form-group
                     button.btn.btn-primary(type='submit') Сохранить
                     | &nbsp;
