--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -5,9 +5,9 @@ block form
         div.panel.panel-default
             div.panel-body
                 h3.thin.text-center= title
-                p.text-center.text-muted Мы рады видеть вас на проекте. Если вы уже зарегистрированы в системе, то вам нужно <a href="login">Авторизироваться</a>. Если вы впервые, то вы должны пройти процесс регистрации заполнив форму ниже.
+                p.text-center.text-muted Измените ваши данные.
                 hr
-                - var action = '/users'
+                - var action = '/settings'
                 - action += user.isNew? '' : '/' + user.id
                 form(action=action, method="post", role="form")
                     input(type='hidden', name='_csrf', value="#{csrf_token}")
@@ -20,10 +20,10 @@ block form
                                 input.form-control.image-preview-filename(type='text', name='avatar' disabled='disabled')
                                 span.input-group-btn
                                     button.btn.btn-default.image-preview-clear(type='button', style='display:none;')
-                                        span.glyphicon.glyphicon-remove  Clear
+                                        span.glyphicon.glyphicon-remove
                                     .btn.btn-default.image-preview-input
                                         span.glyphicon.glyphicon-folder-open
-                                        span.image-preview-input-title  Browse
+                                        span.image-preview-input-title
                                         input(type='file', accept='image/png, image/jpeg, image/gif', name='input-file-preview')
 
                     div.row.form-group
@@ -42,12 +42,13 @@ block form
                         div(data-validate="length", data-length="4").input-group
                             input#validate-email.form-control(type='text', name="group", placeholder='Номер группы', value=user.group, required)
                             span.input-group-addon.danger: span.glyphicon.glyphicon-remove
-                    div.form-group
-                        label Роль:
-                        div.input-group
-                            select.form-control
-                                option(value='Student') Студент
-                                option(value='Professor') Профессор
+                    - if (user.role == "Professor")
+                        div.form-group
+                            label Роль:
+                            div.input-group
+                                select.form-control
+                                    option(value='Professor') Профессор
+                                    option(value='Student') Студент
                     div.form-group
                         label Email <span class="text-danger">*</span>
                         div(data-validate="email").input-group
@@ -56,9 +57,9 @@ block form
                     div.row.form-group
                     hr
                     div.row
-                        div.col-lg-6
-                            label.checkbox
-                                input(type="checkbox")
-                                | Согласен с <a href="page_terms.html">правилами</a>
-                        div.col-lg-6.text-right
+                        //div.col-lg-6
+                        //    label.checkbox
+                        //        input(type="checkbox")
+                        //        | Согласен с <a href="page_terms.html">правилами</a>
+                        div.col-lg-12.text-right
                             button.btn.btn-action(type='submit', disabled) Сохранить изменения
